# calendar-mcp

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.local.json
src/calendar_mcp_server/: __init__.py  date_utils.py  server.py
