[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calendar-mcp"
version = "0.1.0"
description = "Model Context Protocol server for calendar and date utilities"
requires-python = ">=3.14"
dependencies = ["mcp[cli]>=1.4.0", "python-dateutil>=2.8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/calendar_mcp_server"]